Fix icon alignment on mobile

--- a/css/hyde.css
+++ b/css/hyde.css
@@ -107,8 +107,10 @@ a.sidebar-nav-item:focus {
 }
 
 .sidebar-nav-external a {
-  padding-right: 12px;
   text-decoration: none;
+}
+.sidebar-nav-external a:not(:last-child) {
+  padding-right: 12px;
 }
 
 /* Sticky sidebar
